--- a/Server/package.json
+++ b/Server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "start2":"nodemon authserver.js"
+    "start2": "nodemon authserver.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.6.3",
     "nodemon": "^3.0.1"
   }
 }
