--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stripe": "^14.8.0"
   }
 }
